--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 autopep8==1.6.0
 boto3==1.20.31
 botocore==1.23.31
+dj-database-url==0.5.0
 Django==3.2.10
 django-cors-headers==3.10.1
 django-storages==1.12.3
