--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework-simplejwt==5.0.0
 gunicorn==20.1.0
 jmespath==0.10.0
 Pillow==8.4.0
+psycopg2-binary==2.9.3
 pycodestyle==2.8.0
 PyJWT==2.3.0
 python-dateutil==2.8.2
