--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,18 @@ asgiref==3.4.1
 autopep8==1.6.0
 boto3==1.20.31
 botocore==1.23.31
+certifi==2021.10.8
+charset-normalizer==2.0.10
+cloudinary==1.28.1
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2.10
 django-cors-headers==3.10.1
 django-storages==1.12.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 gunicorn==20.1.0
+idna==3.3
 jmespath==0.10.0
 Pillow==8.4.0
 psycopg2-binary==2.9.3
@@ -16,6 +21,7 @@ pycodestyle==2.8.0
 PyJWT==2.3.0
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.27.1
 s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
